Melhoria nos testes unitarios